# claude-local

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: models.yaml
docs/ja/: README.md
docs/plans/: 2026-03-21-benchmark-learnings.md
src/claude_local/: __init__.py  cli.py  config.py  detect.py  proxy.py  translate.py
src/claude_local/backends/: __init__.py  base.py  mlx.py  ollama.py  vllm_spark.py
src/claude_local/models/: registry.py
tests/: test_backends.py  test_config.py  test_detect.py  test_proxy.py  test_registry.py
